Fix the toolbar title beign truncated.

--- a/src/components/ToolbarTitle/ToolbarTitle.scss
+++ b/src/components/ToolbarTitle/ToolbarTitle.scss
@@ -8,6 +8,7 @@
 .toolbar-title-text {
     margin: 0 0 0 10px !important;
     color: inherit !important;
+    width: 150px;
 }
 
 .toolbar-avatar {
